general: fix dark mode big screen

--- a/themes/lantian/source/_assets/style_dark.scss
+++ b/themes/lantian/source/_assets/style_dark.scss
@@ -8,7 +8,7 @@ body {
 }
 
 #bg {
-    display: none;
+    background: none;
 }
 
 header.lantian {
